app-test/testdata/typesystem/neg/pattern-matching-deconstructor-arg-number/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-deconstructor-arg-number/src/patmat.cal" on line 8:
                    T(1, true, 2.5) : 1 end // error
                    ^^^^^^^^^^^^^^^
Wrong number of arguments; expected 2, but was 3.